# game_template

./: .clang_complete.example  .gitignore  CMakeLists.txt  build.sh  fetch_deps.sh  run.sh  test.sh
assets/scripts/: test.lua
assets/shaders/: frag.glsl  vert.glsl
src/: color.hpp  components.hpp  input.hpp  load_image.hpp  main.cpp  matrix.hpp  script_test.hpp  setup_context.hpp  shader.hpp  vector.hpp
src-deps/glad/include/glad/: glad.h
src-deps/glad/src/: glad.c
src/renderer/: renderer.hpp  texture_atlas.hpp
src/tests/: test_runner.hpp  test_test.hpp  util.hpp
